# pypilot_mfd

./: .gitmodules  README.md
enclosure/: back_enclosure.scad  color_enclosure.scad  cover.scad  enclosure.scad  enclosure.stl  threads-library-by-cuiso-v1.scad  ttgo_enclosure.scad
linenoise/: linenoise.c  linenoise.h
receiver/: CMakeLists.txt  idf  partitions.csv  sdkconfig
receiver/main/: .gitignore  CMakeLists.txt  display.cpp  display.h  idf_component.yml  main.cpp  web.cpp  web.h
schematic/: .gitignore  fp-info-cache  fp-lib-table  ideal_diode+.kicad_sch  opto.sch  pypilot_mfd.dcm  pypilot_mfd.dsn  pypilot_mfd.kicad_pcb  pypilot_mfd.kicad_prl  pypilot_mfd.kicad_pro  pypilot_mfd.kicad_sch  pypilot_mfd.lib  pypilot_mfd.pro  pypilot_mfd.sch  sym-lib-table
schematic/pypilot_mfd_footprints.pretty/: PUIAudio_SMT_0825_S_4_R_90.kicad_mod  SW_SPST_PTS810.kicad_mod  (+5 more)
src/: .gitignore  Makefile  README  add_arduino_component.sh  debug  filetoarray.py  generate_font.py  idfs3  partitions.csv  sdkconfig.esp32  sdkconfig.esp32s3  sim_nmea.py
src/main/: CMakeLists.txt  accel.cpp  ais.cpp  ais.h  alarm.cpp  bmp280.h  buzzer.cpp  buzzer.h  display.cpp  display.h  draw.cpp  draw.h  extio.cpp  extio.h  history.cpp  history.h  jlx256160.h  keys.cpp  keys.h  main.cpp  menu.cpp  nmea.cpp  nmea.h  pypilot_client.cpp  pypilot_client.h  rgb_lcd.h  sensors.cpp  sensors.h  serial.cpp  serial.h  settings.cpp  settings.h  signalk.cpp  test.cpp  testdraw.cpp  testhistory.cpp  testsettings.cpp  u8g2drv.h  utils.cpp  utils.h  (+6 more)
src/main/rapidjson/: allocators.h  rapidjson.h
(+175 files in other folders)
